<resources>
    <string name="app_name">File Sync</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_ftp_conenctino">Add FTP Connection</string>
    <string name="add_ftp_client">Add FTP Client</string>
    <string name="ftp_host">FTP Host</string>
    <string name="ftp_user">FTP User</string>
    <string name="ftp_password">FTP Password</string>
    <string name="hostTemplate">192.168.100.10</string>
    <string name="userTemplate">myuser</string>
    <string name="passwordTemplate">myPass</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="title_activity_ftp_connections">FtpConnections</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="connSuccess">Connection success...</string>
    <string name="connError">Could not conenct to server...</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="title_activity_ftp_explorer">FTP Explorer</string>
    <string name="title_activity_link_folders">LinkFolders</string>
    <string name="title_activity_choose_local_folder">ChooseLocalFolder</string>
    <string name="title_activity_view_sync_data">ViewSyncData</string>
    <string name="ftp_root_location">Root Location</string>
    <string name="connection_type">Connection Type</string>
    <string name="ftpOrSftp">FTP or SFTP</string>
    <string name="hostName">Name</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string-array name="connTypesArray">
        <item>FTP</item>
        <item>SFTP</item>
    </string-array>
    <string name="facebook_app_id">2590702947831988</string>
    <string name="fb_login_protocol_scheme">fb2590702947831988</string>
    <string name="title_activity_login">File Sync</string>
    <string name="sftp_port">SFTP Port</string>
</resources>
